--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     <title>OdontoMóvil</title>
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="shortcut icon" href="img/faticon.jpg">
 
 </head>
 <body>
