Cambios conozcanos.css

--- a/conozcanos.html
+++ b/conozcanos.html
@@ -8,19 +8,15 @@
     <meta name= "author" content="Karla Ballestero & Fernanda Murillo">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OdontoMóvil</title>
-    
     <link rel="stylesheet" href="css/conozcanos.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="js/main.js">
     <link rel="shortcut icon" href="img/faticon.jpg">
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script src="main.js"></script>
 
 </head>
 <body>
     <header> 
-
-        <a href="#menu" id="toggle"><span></span></a>
-
-    
         </div>
         <div class="menu_bar">
             <a href="#" class="btn-menu"><span class="icon-menu"></span>Menú</a>
