--- a/conozcanos.html
+++ b/conozcanos.html
@@ -19,7 +19,7 @@
     <header> 
         </div>
         <div class="menu_bar">
-            <a href="#" class="btn-menu"><span class="icon-menu"></span>Menú</a>
+            <a href="#" class="btn-menu"><img src="img/menu-button-of-three-horizontal-lines.png"></a>
         </div>
         <nav>
             <ul>
