cambios en NuestroEquipo

--- a/nuestroEquipo.html
+++ b/nuestroEquipo.html
@@ -113,17 +113,23 @@
                 </div>
                 
                 <aside class="widget widget_contacts wpb_content_element vc_widgets style_2">
-                    <div class="widget_title"><h5>Contacto</h5></div>
-                    <ul><li><div class="text"><strong>Ubicación</strong>
-                        <p>Costa Rica, San José, Paseo Colón, de la Toyota 100 mts al Sur y 50 mts al Oeste, costado 
-                            Norte del parque Maria Auxiliadora</p>
+                    <div class="widget_title">
+                        <h5>Contacto</h5>
+                    </div>
+                    <ul><li><div class="text">
+                        <strong>Ubicación</strong>
+                        <p>Costa Rica, Alajuela, Ciudad Quesada.</p>
                         </div>
-                        <strong>E-mail</strong><p><a href="mailto:info@sonrisaparatodos.com">info@sonrisaparatodos.com</a></p></div>
-                        <div class="text"><strong>Teléfono</strong><p>+506 4010-3333<br>
-                    o al 800-SONRISA<br>
-                    (Línea gratuita)<br>
-                    Whatsapp:<br>
-                    7031-7979</p></div><div class="icon"><i class="stm-icon-roundels"></i></div></li></ul></aside>
+                        <strong>E-mail</strong>
+                        <p><a href="mailto:info@odontomovil.com">info@odontomovil.com</a></p>
+                        </div>
+                        <div class="text">
+                            <strong>Teléfono</strong>
+                                <p>+506 8715-2228<br>
+                                o al 8715-2232<br>
+                                 Whatsapp:      <br>
+                                 +506 8715-2228</p></div>
+                </aside>
 
 
                 </aside>
