--- a/nuestroEquipo.html
+++ b/nuestroEquipo.html
@@ -53,15 +53,31 @@
             </ul>
         </nav>
     </header>
-    <section id="boletin">
+    <header>
+    <div class="top">
         <div class="contenedor">
-            <h1>Busqueda</h1>
-            <form>
-                <input type="email" name="email" placeholder="Ingrese su búsqueda">
-                <button type="submit" class="boton1"> Buscar</button>
-            </form>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="top">
+                        <img src="img/user.png"><strong>LLÁMENOS AL +506 8715-2228</strong>
+                        <span>San Carlos, Costa Rica</span>
+                    </div>
+                        <a href="tel:+506 8715-2228" class="link"></a>
+                </div>
+            </div>
+    <div class="raw">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <div class="top"><img src="img/conversation.png"></div>
+                <div class="text"><strong>+506 8715-2232</strong><span>(Llama Ya!)</span></div>
+                    <a href="tel:+506 8715-2228" class="link"></a>
         </div>
-    </section>
+    </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <div class="top"><img src="img/gmail.png"></div>
+        <div class="text"><strong>Escríbanos a</strong><span> info@sonrisaparatodos.com</span></div>
+            <a href="mailto:info@odontomovil.com" class="link"></a>
+        </div>
+    </header>
     <aside id="lateral">
             <div class="oscuro">
                 <h3>Nuestro equipo</h3> 
@@ -114,7 +130,7 @@
             <div class="widget_title">
                 <h5>Contacto</h5>
             </div>
-            <ul><li><div class="text">
+            <div class="text">
                 <strong>Ubicación</strong>
                 <p>Costa Rica, Alajuela, Ciudad Quesada.</p>
                 </div>
@@ -130,9 +146,9 @@
         </aside>
 
 
-        </aside>
+        
     
-        </aside>
+</aside>
     </div>
 
 </section>
