--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                  <li class="nav-item"><a class="nav-link"  href="#">Inicio</a></li>
                  <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Conózcanos</a></li>
                  <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Tratamientos</a></li>
-                 <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Convenios</a></li>
+                 <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
                  <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Giras</a></li>
                  <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Contacto</a></li>
                  <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Servicios en linea</a></li>
