Cambios en Nuestro Equipo

--- a/conozcanos.html
+++ b/conozcanos.html
@@ -28,7 +28,7 @@
                 <li class="submenu">
                     <a href="#">Conózcanos</a>
                      <ul class="children">
-                        <li class="nav-item"><a class="nav-link"  href="#">¿Quiénes Somos?</a></li>
+                        <li class="nav-item"><a class="nav-link"  href="conozcanos.html">¿Quiénes Somos?</a></li>
                         <li class="nav-item"><a class="nav-link"  href="nuestroEquipo.html">Nuestro Equipo</a></li>
                     </ul>
                 </li>
@@ -85,7 +85,7 @@
     <section id="main">
         <div class="contenedor">
             <article id="main-col">
-                <h1 class="p1">¿Quiénes Somos?</h1>
+                <h1 class="p1"><strong>¿Quiénes Somos?</strong></h1>
                 <li class="p1" style="text-align: justify;"><span class="s1">Somos un centro odontológico móvil en Costa Rica que le ofrece
                      soluciones efectivas en tratamientos bucales adecuadas a sus necesidades dentales.<br></span></li>
                 <li class="p1" style="text-align: justify;"><span class="s1">Nuestros dentistas son licenciados en sus áreas.<br>
@@ -95,7 +95,7 @@
                     
                 <div class="contenedor">
                     <article class="main-col"> 
-                        <h2 class="p1"> Nuestra Historia</h2>
+                        <h2 class="p1"><strong> Nuestra Historia</strong></h2>
 
                         <p class="p1" style="text-align: justify;"><span class="s1"><br>
                             Odontomovil es una forma diferente de llevar salud bucodental hasta la puerta de su casa o empresa 
@@ -115,6 +115,7 @@
         </div>
 
     </section>
+    
 
     <footer>
         <p>OdontoMóvil, Copyright &copy; 2018</p>
