--- a/contacto.html
+++ b/contacto.html
@@ -109,10 +109,13 @@
                             +506 8715-2228</p>
                 </div>
         </aside>
-
-
+        <div class="crm-webform-header-container">
+                <h2 class="p1">Formulario de Contacto</h2>
+        <div>Por favor, complete el formulario con los datos solicitados 
+            para que una de nuestras asesoras dentales pueda contactarle.</div>
+        </div>
         
-    
+
 </aside>
     </div>
 
