--- a/tratamientos.html
+++ b/tratamientos.html
@@ -29,7 +29,7 @@
                     </ul>
                 </li>
                 <li class="submenu">
-                    <a href="#">Tratamientos</a>
+                    <a href="tratamientos.html">Tratamientos</a>
                     <ul class="children">
                         <li class="nav-item"><a class="nav-link"  href="#">Revisión Dental</a></li>
                         <li class="nav-item"><a class="nav-link"  href="#">Resina(Calzas Blanca)</a></li>
@@ -40,10 +40,10 @@
                         <li class="nav-item"><a class="nav-link"  href="#">Extracciones</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link"  href="#">Convenios</a></li>
+                <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
                 <li class="nav-item"><a class="nav-link"  href="#">Giras</a></li>
-                <li class="nav-item"><a class="nav-link"  href="#">Contacto</a></li>
-                <li class="nav-item"><a class="nav-link"  href="#">Servicios en línea</a></li>
+                <li class="nav-item"><a class="nav-link"  href="contacto.html">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link"  href="servicios.html">Servicios en línea</a></li>
                 <li class="nav-item"><a class="nav-link"  href="#">Registro/Login</a></li>
                 
             </ul>
