cambios en convenios

--- a/contacto.html
+++ b/contacto.html
@@ -34,14 +34,14 @@
             <ul>
                 <li class="nav-item"><a class="nav-link"  href="home.html">Inicio</a></li>
                 <li class="submenu">
-                    <a href="#">Conózcanos</a>
+                    <a href="conozcanos.html">Conózcanos</a>
                      <ul class="children">
                         <li class="nav-item"><a class="nav-link"  href="conozcanos.html">¿Quiénes Somos?</a></li>
                         <li class="nav-item"><a class="nav-link"  href="nuestroEquipo.html">Nuestro Equipo</a></li>
                     </ul>
                 </li>
                 <li class="submenu">
-                    <a href="#">Tratamientos</a>
+                    <a href="tratamientos.html">Tratamientos</a>
                     <ul class="children">
                         <li class="nav-item"><a class="nav-link"  href="#">Revisión Dental</a></li>
                         <li class="nav-item"><a class="nav-link"  href="#">Resina(Calzas Blanca)</a></li>
@@ -52,7 +52,7 @@
                         <li class="nav-item"><a class="nav-link"  href="#">Extracciones</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link"  href="#">Convenios</a></li>
+                <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
                 <li class="nav-item"><a class="nav-link"  href="#">Giras</a></li>
                 <li class="nav-item"><a class="nav-link"  href="contacto.html">Contacto</a></li>
                 <li class="nav-item"><a class="nav-link"  href="servicios.html">Servicios en línea</a></li>
