--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             <ul class="navbar-nav mr-auto">
                  <li class="nav-item"><a class="nav-link"  href="#">Inicio</a></li>
                  <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Conózcanos</a></li>
-                 <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Tratamientos</a></li>
+                 <li class="nav-item"><a class="nav-link"  href="tratamientos.html">Tratamientos</a></li>
                  <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
                  <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Giras</a></li>
                  <li class="nav-item"><a class="nav-link"  href="contacto.html">Contacto</a></li>
