--- a/nuestroEquipo.html
+++ b/nuestroEquipo.html
@@ -26,14 +26,14 @@
             <ul>
                 <li class="nav-item"><a class="nav-link"  href="home.html">Inicio</a></li>
                 <li class="submenu">
-                    <a href="#">Conózcanos</a>
+                    <a href="conozcanos.html">Conózcanos</a>
                      <ul class="children">
                         <li class="nav-item"><a class="nav-link"  href="conozcanos.html">¿Quiénes Somos?</a></li>
                         <li class="nav-item"><a class="nav-link"  href="nuestroEquipo.html">Nuestro Equipo</a></li>
                     </ul>
                 </li>
                 <li class="submenu">
-                    <a href="#">Tratamientos</a>
+                    <a href="tratamientos.html">Tratamientos</a>
                     <ul class="children">
                         <li class="nav-item"><a class="nav-link"  href="#">Revisión Dental</a></li>
                         <li class="nav-item"><a class="nav-link"  href="#">Resina(Calzas Blanca)</a></li>
@@ -44,7 +44,7 @@
                         <li class="nav-item"><a class="nav-link"  href="#">Extracciones</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link"  href="#">Convenios</a></li>
+                <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
                 <li class="nav-item"><a class="nav-link"  href="#">Giras</a></li>
                 <li class="nav-item"><a class="nav-link"  href="contacto.html">Contacto</a></li>
                 <li class="nav-item"><a class="nav-link"  href="servicios.html">Servicios en línea</a></li>
@@ -132,7 +132,6 @@
 
     </div>
 </aside>
-        
         <aside class="widget">
             <div class="widget_title">
                 <h5>Contacto</h5>
@@ -153,9 +152,7 @@
                         +506 8715-2228</p>
                 </div>
         </aside>
-        
-   
-
+ 
 <footer>
     <p>OdontoMóvil, Copyright &copy; 2018</p>
     <div class="social">
