--- a/tratamientos.html
+++ b/tratamientos.html
@@ -22,7 +22,7 @@
             <ul>
                 <li class="nav-item"><a class="nav-link"  href="home.html">Inicio</a></li>
                 <li class="submenu">
-                    <a href="#">Conózcanos</a>
+                    <a href="conozcanos.html">Conózcanos</a>
                     <ul class="children">
                         <li class="nav-item"><a class="nav-link"  href="#">¿Quiénes Somos?</a></li>
                         <li class="nav-item"><a class="nav-link"  href="nuestroEquipo.html">Nuestro Equipo</a></li>
