--- a/tratamientos.html
+++ b/tratamientos.html
@@ -48,6 +48,34 @@
                 
             </ul>
         </nav>
+    </header> 
+    <header>
+    <div class="top" style="text-align: center; display: flex; justify-content: center; align-items: center;">
+
+            <div class="row" >
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="top">
+                        <img src="img/user.png">
+                        <div class="text">
+                        <strong>LLÁMENOS AL +506 8715-2228</strong><br>
+                        <span>San Carlos, Costa Rica</span>
+                        </div>
+                    </div>
+                        <a href="tel:+506 8715-2228" class="link"></a>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="top"><img src="img/conversation.png"></div>
+                        <div class="text"><strong>+506 8715-2232</strong><span>(Llama Ya!)</span></div>
+                            <a href="tel:+506 8715-2228" class="link"></a>
+                </div>
+        
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="top"><img src="img/gmail.png"></div>
+                <div class="text"><strong>Escríbanos a</strong><span> info@sonrisaparatodos.com</span></div>
+                    <a href="mailto:info@odontomovil.com" class="link"></a>
+            </div>
+    </div>
     </header>    
 </body>
 </html>
