Agrego Quienes somos de vinculo

--- a/nuestroEquipo.html
+++ b/nuestroEquipo.html
@@ -28,7 +28,7 @@
                 <li class="submenu">
                     <a href="conozcanos.html">Conózcanos</a>
                      <ul class="children">
-                        <li class="nav-item"><a class="nav-link"  href="conozcanos.html">¿Quiénes Somos?</a></li>
+                        <li class="nav-item"><a class="nav-link"  href="quienesSomos.html">¿Quiénes Somos?</a></li>
                         <li class="nav-item"><a class="nav-link"  href="nuestroEquipo.html">Nuestro Equipo</a></li>
                     </ul>
                 </li>
