--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                  <li class="nav-item"><a class="nav-link"  href="tratamientos.html">Tratamientos</a></li>
                  <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
                  <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Giras</a></li>
-                 <li class="nav-item"><a class="nav-link"  href="contacto.html">Contacto</a></li>
+                 <li class="nav-item"><a class="nav-link"  href="contacto.html">Contáctenos</a></li>
                  <li class="nav-item"><a class="nav-link"  href="servicios.html">Servicios en linea</a></li>
                  <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Registro/Login</a></li>
              </ul>   
