--- a/servicios.html
+++ b/servicios.html
@@ -44,7 +44,7 @@
                 </li>
                 <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
                 <li class="nav-item"><a class="nav-link"  href="#">Giras</a></li>
-                <li class="nav-item"><a class="nav-link"  href="contacto.html">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link"  href="contacto.html">Contáctenos</a></li>
                 <li class="nav-item"><a class="nav-link"  href="servicios.html">Servicios en línea</a></li>
                 <li class="nav-item"><a class="nav-link"  href="#">Registro/Login</a></li>
                 
