Espaciado en header

--- a/nuestroEquipo.html
+++ b/nuestroEquipo.html
@@ -61,7 +61,7 @@
                     <div class="top">
                         <img src="img/user.png">
                         <div class="text">
-                        <strong>LLÁMENOS AL +506 8715-2228</strong><br>
+                        <strong>LLÁMENOS AL </strong><br>+506 8715-2228<br>
                         <span>San Carlos, Costa Rica</span>
                         </div>
                     </div>
@@ -70,13 +70,13 @@
 
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="top"><img src="img/conversation.png"></div>
-                        <div class="text"><strong>+506 8715-2232</strong><span>(Llama Ya!)</span></div>
+                        <div class="text"><strong>+506 8715-2232</strong><br><span>(Llama Ya!)</span></div>
                             <a href="tel:+506 8715-2228" class="link"></a>
                 </div>
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                 <div class="top"><img src="img/gmail.png"></div>
-                <div class="text"><strong>Escríbanos a</strong><span> info@sonrisaparatodos.com</span></div>
+                <div class="text"><strong>Escríbanos a</strong><span> info@OdontoMóvil.com</span></div>
                     <a href="mailto:info@odontomovil.com" class="link"></a>
             </div>
     </div>
@@ -131,28 +131,7 @@
         </div>
 
     </div>
-</aside>
-        <aside class="widget">
-            <div class="widget_title">
-                <h5>Contacto</h5>
-            </div>
-            <div class="text">
-                <strong>Ubicación</strong>
-                <p>Costa Rica, Alajuela, Ciudad Quesada.</p>
-                </div>
 
-                <strong>E-mail</strong>
-                <p><a href="mailto:info@odontomovil.com">info@odontomovil.com</a></p>
-
-                <div class="text">
-                    <strong>Teléfono</strong>
-                    <p>+506 8715-2228<br>
-                    o al 8715-2232<br>
-                        Whatsapp:      <br>
-                        +506 8715-2228</p>
-                </div>
-        </aside>
- 
 <footer>
     <p>OdontoMóvil, Copyright &copy; 2018</p>
     <div class="social">
