--- a/nuestroEquipo.html
+++ b/nuestroEquipo.html
@@ -47,7 +47,7 @@
                 <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
                 <li class="nav-item"><a class="nav-link"  href="#">Giras</a></li>
                 <li class="nav-item"><a class="nav-link"  href="contacto.html">Contáctenos</a></li>
-                <li class="nav-item"><a class="nav-link"  href="servicios.html">Servicios en línea</a></li>
+                <li class="nav-item"><a class="nav-link"  href="blog.html">blog</a></li>
                 <li class="nav-item"><a class="nav-link"  href="#">Registro/Login</a></li>
                 
             </ul>
