--- a/home.html
+++ b/home.html
@@ -14,26 +14,28 @@
 
 </head>
 <body>
+    
         <div class="contenedor">
-        <div class="navbar navbar-expand-lg navbar-light bg-light">
-            <ul class="navbar-nav mr-auto">
-                 <li class="nav-item"><a class="nav-link"  href="#">Inicio</a></li>
-                 <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Conózcanos</a></li>
-                 <li class="nav-item"><a class="nav-link"  href="tratamientos.html">Tratamientos</a></li>
-                 <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
-                 <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Giras</a></li>
-                 <li class="nav-item"><a class="nav-link"  href="contacto.html">Contáctenos</a></li>
-                 <li class="nav-item"><a class="nav-link"  href="blog.html">Blog</a></li>
-                 <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Registro/Login</a></li>
-             </ul>   
-            </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light"  >
+            <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active"><a class="nav-link"  href="#">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Conózcanos</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="tratamientos.html">Tratamientos</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Giras</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="contacto.html">Contáctenos</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="blog.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Registro/Login</a></li>
+                </ul>   
+            </nav>
         </div>
         <div class="header">
             <h1> OdontoMóvil</h1>
             <p> Te damos la mejor opción y comodidad en donde tu estés.</p>
             <button class="button"> Conocer más</button>
         </div>
-    </div>
+        </div>
+    
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
