Tratamientos, login, convenios

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Giras</a></li>
                     <li class="nav-item"><a class="nav-link"  href="contacto.html">Contáctenos</a></li>
                     <li class="nav-item"><a class="nav-link"  href="blog.html">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Registro/Login</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="login.html">Registro/Login</a></li>
                 </ul>   
             </nav>
         </div>
