--- a/conozcanos.html
+++ b/conozcanos.html
@@ -45,10 +45,10 @@
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
-                <li class="nav-item"><a class="nav-link"  href="#">Giras</a></li>
+                <li class="nav-item"><a class="nav-link"  href="giras.html">Giras</a></li>
                 <li class="nav-item"><a class="nav-link"  href="contacto.html">Contáctenos</a></li>
                 <li class="nav-item"><a class="nav-link"  href="blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link"  href="#">Registro/Login</a></li>
+                <li class="nav-item"><a class="nav-link"  href="login.html">Registro/Login</a></li>
                 
             </ul>
         </nav>
