--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                     <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Conózcanos</a></li>
                     <li class="nav-item"><a class="nav-link"  href="tratamientos.html">Tratamientos</a></li>
                     <li class="nav-item"><a class="nav-link"  href="convenios.html">Convenios</a></li>
-                    <li class="nav-item"><a class="nav-link"  href="conozcanos.html">Giras</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="giras.html">Giras</a></li>
                     <li class="nav-item"><a class="nav-link"  href="contacto.html">Contáctenos</a></li>
                     <li class="nav-item"><a class="nav-link"  href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link"  href="login.html">Registro/Login</a></li>
