--- a/giras.html
+++ b/giras.html
@@ -82,6 +82,26 @@
     </div>
     </header>
 
+    <div class="contenedor">
+        <article class="main-col"> 
+            <h2 class="p1"><strong> Giras</strong></h2>
+
+            <p class="p1" style="text-align: justify;"><span class="s1"><br>
+                Odontomovil es una forma diferente de llevar salud bucodental hasta la puerta de su casa o empresa 
+                ofreciendo nuestros servicios en odontología general y estética dental, somos dos cirujanos dentistas que 
+                comprenden la importancia de tratar con mucho profesionalismo y carisma a todos nuestros pacientes. 
+                Ofrecemos garantía en todos nuestros trabajos, damos charlas de fisioterapia oral a cada persona que atendemos 
+                y le hacemos entender el porqué tenía cierta condición o lesión así concientizamos y mejoramos los resultados a 
+                largo plazo en la población atendida en nuestra clínica. 
+                 Recorremos el país realizando ferias de salud empresariales y visitas a comunidades rurales
+                lejanas que no tienen fácil acceso a la salud bucodental.
+                </span></p>
+            </p>
+           
+        </article>
+
+    </div>
+
     <footer>
         <p>OdontoMóvil, Copyright &copy; 2018</p>
         <div class="social">
