--- a/giras.html
+++ b/giras.html
@@ -151,6 +151,21 @@
                 <td>23/07/2018</td>
                 <td>29/07/2018</td>
               </tr>
+              <tr>
+                <td>Valle Central</td>
+                <td>30/07/2018</td>
+                <td>05/08/2018</td>
+              </tr>
+              <tr>
+                <td>Ciudad Quesada</td>
+                <td>06/08/2018</td>
+                <td>15/08/2018</td>
+              </tr>
+              <tr>
+                <td>SkyAdventures Fortuna</td>
+                <td>16/08/2018</td>
+                <td>18/08/2018</td>
+              </tr>
             </tbody>
           </table>
     </div>
