--- a/giras.html
+++ b/giras.html
@@ -83,91 +83,94 @@
     </header>
 
     <div class="contenedor">
-        <article class="main-col"> 
+        <div class="giras">
+            <article class="main-col"> 
             <h2 class="p1"><strong> Giras</strong></h2>
-
             <p class="p1" style="text-align: justify;"><span class="s1"><br> 
                 Recorremos el país realizando ferias de salud empresariales y visitas a comunidades rurales
                 lejanas que no tienen fácil acceso a la salud bucodental.
                 </span></p>
-            </p>
-           
-        </article>
-
+            </p>       
+            </article>
+        </div>
     </div>
 
-    <div class="container">
-        <table class="table">
-            <thead class="thead-light">
-              <tr>
-                <th>Lugar</th>
-                <th>Inicio</th>
-                <th>Fin</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Ciudad Quesada</td>
-                <td>15/06/2018</td>
-                <td>26/06/2018</td>
-              </tr>
-              <tr>
-                <td>SkyAdventures Fortuna</td>
-                <td>27/06/2018</td>
-                <td>28/06/2018</td>
-              </tr>
-              <tr>
-                <td>Barva de Heredia</td>
-                <td>29/06/2018</td>
-                <td>29/06/2018</td>
-              </tr>
-              <tr>
-                <td>San Pedro de Montes de Oca</td>
-                <td>01/07/2018</td>
-                <td>03/07/2018</td>
-              </tr>
-              <tr>
-                <td>Ciudad Quesada</td>
-                <td>04/07/2018</td>
-                <td>09/07/2018</td>
-              </tr>
-              <tr>
-                <td>SkyAdventures Monteverde</td>
-                <td>10/07/2018</td>
-                <td>11/07/2018</td>
-              </tr>
-              <tr>
-                <td>Guanacaste</td>
-                <td>12/07/2018</td>
-                <td>19/07/2018</td>
-              </tr>
-              <tr>
-                <td>Valle Central</td>
-                <td>20/07/2018</td>
-                <td>22/07/2018</td>
-              </tr>
-              <tr>
-                <td>Cahuita</td>
-                <td>23/07/2018</td>
-                <td>29/07/2018</td>
-              </tr>
-              <tr>
-                <td>Valle Central</td>
-                <td>30/07/2018</td>
-                <td>05/08/2018</td>
-              </tr>
-              <tr>
-                <td>Ciudad Quesada</td>
-                <td>06/08/2018</td>
-                <td>15/08/2018</td>
-              </tr>
-              <tr>
-                <td>SkyAdventures Fortuna</td>
-                <td>16/08/2018</td>
-                <td>18/08/2018</td>
-              </tr>
-            </tbody>
-          </table>
+
+    <div class="container">             
+        <div class="actuales">
+            <h4>Nuestra agenda:</h4>
+            <table class="table">
+                <thead class="thead-light">
+                <tr>
+                    <th>Lugar</th>
+                    <th>Inicio</th>
+                    <th>Fin</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Ciudad Quesada</td>
+                    <td>15/06/2018</td>
+                    <td>26/06/2018</td>
+                </tr>
+                <tr>
+                    <td>SkyAdventures Fortuna</td>
+                    <td>27/06/2018</td>
+                    <td>28/06/2018</td>
+                </tr>
+                <tr>
+                    <td>Barva de Heredia</td>
+                    <td>29/06/2018</td>
+                    <td>29/06/2018</td>
+                </tr>
+                <tr>
+                    <td>San Pedro de Montes de Oca</td>
+                    <td>01/07/2018</td>
+                    <td>03/07/2018</td>
+                </tr>
+                <tr>
+                    <td>Ciudad Quesada</td>
+                    <td>04/07/2018</td>
+                    <td>09/07/2018</td>
+                </tr>
+                <tr>
+                    <td>SkyAdventures Monteverde</td>
+                    <td>10/07/2018</td>
+                    <td>11/07/2018</td>
+                </tr>
+                <tr>
+                    <td>Guanacaste</td>
+                    <td>12/07/2018</td>
+                    <td>19/07/2018</td>
+                </tr>
+                <tr>
+                    <td>Valle Central</td>
+                    <td>20/07/2018</td>
+                    <td>22/07/2018</td>
+                </tr>
+                <tr>
+                    <td>Cahuita</td>
+                    <td>23/07/2018</td>
+                    <td>29/07/2018</td>
+                </tr>
+                <tr>
+                    <td>Valle Central</td>
+                    <td>30/07/2018</td>
+                    <td>05/08/2018</td>
+                </tr>
+                <tr>
+                    <td>Ciudad Quesada</td>
+                    <td>06/08/2018</td>
+                    <td>15/08/2018</td>
+                </tr>
+                <tr>
+                    <td>SkyAdventures Fortuna</td>
+                    <td>16/08/2018</td>
+                    <td>18/08/2018</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <footer>
