Cambios en convenios, giras y tratamientos

--- a/tratamientos.html
+++ b/tratamientos.html
@@ -44,7 +44,7 @@
                 <li class="nav-item"><a class="nav-link"  href="giras.html">Giras</a></li>
                 <li class="nav-item"><a class="nav-link"  href="contacto.html">Contáctenos</a></li>
                 <li class="nav-item"><a class="nav-link"  href="blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link"  href="#">Registro/Login</a></li>
+                <li class="nav-item"><a class="nav-link"  href="login.html">Registro/Login</a></li>
                 
             </ul>
         </nav>
@@ -77,6 +77,11 @@
             </div>
     </div>
     </header>
+    <aside id="centro">
+            <div class="light" style="width: 100%; display: flex; ">
+                    <h1><strong>Tratamientos</strong></h1>
+            </div>
+    </aside>
     
     <!--Menu-->
     <div id="contenedor">
@@ -91,7 +96,7 @@
             <div class="card-body">
                 <h4 class="card-title">Blanqueamiento Dental</h4>
             </div>
-            <img class="card-img-bottom" src="img/blanqueamiento4.jpg" alt="Card image" style="width:100%">
+            <img class="card-img-bottom" src="img/blanqueamiento.jpg" alt="Card image" style="width:100%">
         </div>
 
         <div class="card" style="width:350px">
@@ -143,12 +148,6 @@
                 <img class="card-img-bottom" src="img/protesis.jpg" alt="Card image" style="width:100%">
         </div>
 
-        <div class="card" style="width:350px">
-            <div class="card-body">
-                <h4 class="card-title">Resinas & Amalgamas</h4>
-            </div>
-            <img class="card-img-bottom" src="img/amalgamaresina.jpg" alt="Card image" style="width:100%">
-        </div>
 
     <footer>
         <div>
