--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
     </div>
     </header>
     <aside id="centro">
-        <div class="light" style="width: 100%; display: flex; ">
+            <div class="light" style="width: 100%; display: center; ">
                 <h1><strong>Preguntas Frecuentes</strong></h1>
         </div>
     <div class="padre" style="display: flex; flex-flow:row wrap;" >
