--- a/nuestroEquipo.html
+++ b/nuestroEquipo.html
@@ -163,7 +163,8 @@
                         <h4 class="card-title">Dr. Francisco Valerín Alfaro</h4>
 
                         <strong>Educación</strong>
-                        <p>Lic. en Odontología, Universidad Latina de Costa Rica</p>
+                        <p>Lic. en Odontología</p>
+                        <p> Universidad Latina de Costa Rica</p>
 
                         <strong>Idiomas</strong>
                         <p>Español, Inglés</p>
