--- a/giras.html
+++ b/giras.html
@@ -82,11 +82,16 @@
     </div>
     </header>
 
+    <aside id="centro">
+            <div class="light" style="width: 100%; display: flex; ">
+                    <h1><strong>Giras</strong></h1>
+            </div>
+    </aside>
+
     <div class="contenedor">
         <div class="giras">
             <article class="main-col"> 
-            <h2 class="p1"><strong> Giras</strong></h2>
-            <p class="p1" style="text-align: justify;"><span class="s1"><br> 
+            <p class="p1" style="text-align: center;"><span class="s1"><br> 
                 Recorremos el país realizando ferias de salud empresariales y visitas a comunidades rurales
                 lejanas que no tienen fácil acceso a la salud bucodental.
                 </span></p>
